# semasia-datasets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
configs/hydra/: alignment.yaml  alignment_methods.yaml  check_hf.yaml  compute_metrics.yaml  config.yaml  encode_timm.yaml  generate_readme.yaml  model_registry.yaml  plot_alignment.yaml  plot_stat.yaml  proto_alignment.yaml  prototype_comparison.yaml  push_to_hf.yaml  stat_analysis.yaml  tda_extraction.yaml  tda_plot.yaml  tsp_extraction.yaml
configs/hydra/clustering/: agglomerative.yaml  birch.yaml  dbscan.yaml  hdbscan.yaml  kmeans.yaml  spectral.yaml
configs/hydra/dataset/: celeba.yaml  cifar10.yaml  cifar100.yaml  fashion_mnist.yaml  imagenet-1k.yaml  imagenette.yaml  mnist.yaml  oxford-flower.yaml  oxford-flowers.yaml  svhn.yaml  tiny-imagenet.yaml  tiny_imagenet.yaml
configs/hydra/dataset/classification/: ImageNet-C.yaml  cifar100.yaml  (+3 more)
configs/plotting/: plt.mplstyle
notebooks/: compare_latents.py  latent_exploration.py  model_semantics.py  models_exploration_analysis.py  prototype_alignment.py  section2.ipynb  section2.py  semasia.py
scripts/: alignment.py  check_hf_parquet.py  compute_metrics.py  encode_dataset_all_timm.py  generate_readme.py  plot_alignment.py  plot_correlation_heatmap.py  plot_stat.py  proto_alignment.py  prototype_comparison.py  push_model_registry.py  push_to_hf.py  stat_analysis.py  tda.py  tda_comparison.py  tda_extraction.py  tda_plot.py  test.py  tsp_extraction.py
src/: __init__.py  conceptual.py  huggingface.py  metrics.py  utils.py
src/metrics/: __init__.py  alignment.py  entropy.py  graph.py  pointcloud.py  prototypes.py
src/models/: __init__.py  latent.py  timm.py
src/objects/: __init__.py  alignment.py  anchor.py  graph.py  latent.py
src/plotting/: __init__.py  latent.py  tda.py
src/tda/: __init__.py  distances.py  features.py  persistence.py  signature.py
src/tsp/: __init__.py  graph_inference.py  laplace.py
src/utils/: __init__.py  huggingface.py  io.py  local.py  timm_metadata.py
src/visualizations/: __init__.py  parallel_coordinates.py  prototypes.py  statistical.py
tests/: conftest.py  test_latent.py  test_metrics.py
