[project]
name = "semantic-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "hydra-core>=1.3.2",
    "polars>=1.36.1",
]

[tool.ruff.lint]
extend-select = [
    'C4',
    'SIM',
    'UP',
    'TCH',
    'I',
    'NPY',
    'PERF',
    'E',
]
fixable = ['ALL']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
