[project]
name = "semantic-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=1.2.3",
    "hydra-core>=1.3.2",
    "polars>=1.36.1",
]

[tool.ruff.lint]
extend-select = [
    'C4',
    'SIM',
    'UP',
    'TCH',
    'I',
    'NPY',
    'PERF',
    'E',
]
fixable = ['ALL']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
docstring-code-format = true

[dependency-groups]
dev = [
    "rust-just>=1.46.0",
]

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint.per-file-ignores]
"src/huggingface.py" = ["E501"]
