[project]
name = "semantic-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=1.2.3",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "marimo>=0.23.0",
    "matplotlib>=3.10.8",
    "plotly>=6.7.0",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "scikit-tda>=1.1.1",
    "timm>=1.0.26",
    "umap-learn>=0.5.12",
    "wigglystuff>=0.1.10",
]

[tool.ruff.lint]
extend-select = [
    'C4',
    'SIM',
    'UP',
    'TCH',
    'I',
    'NPY',
    'PERF',
    'E',
]
fixable = ['ALL']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
docstring-code-format = true

[dependency-groups]
dev = [
    "rust-just>=1.46.0",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E501", "C408"]

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
